--- a/src/main/MainFrame.form
+++ b/src/main/MainFrame.form
@@ -108,6 +108,10 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="datePicker5" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="exportGraphs" min="-2" pref="215" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="15" max="32767" attributes="0"/>
                   </Group>
@@ -140,7 +144,8 @@
               <EmptySpace type="separate" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="exportGraphs" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="datePicker2" min="-2" pref="22" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="datePicker5" min="-2" pref="33" max="-2" attributes="0"/>
@@ -285,6 +290,17 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Click on the Buttons to toggle visibility"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="exportGraphs">
+      <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="cc" red="0" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Export All"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="exportGraphsActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
